# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  main.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  play_game.py  welcome_user.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
