[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zakharov <sasha750i@mail.ru>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
simpleeval = "^0.9.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-games = "brain_games.scripts.brain_games:main"
